output/exposer-6-d6f0237c-0253-4ee9-bb23-056aacd6c005/delete-sync-162b1d5c-87b9-4c35-b9a7-5f2379ce565e/apply/ingress-d6f0237c-0253-4ee9-bb23-056aacd6c005-1862688057-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.response-404: '{"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404","messageBody":"no scopes exposed through this service."}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/actions.response-404":"{\"type\":\"fixed-response\",\"fixedResponseConfig\":{\"contentType\":\"text/plain\",\"statusCode\":\"404\",\"messageBody\":\"no scopes exposed through this service.\"}}","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip","kubernetes.io/ingress.class":"alb"},"creationTimestamp":"2025-06-23T18:17:06Z","generation":1 [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2025-06-23T18:17:06Z"
  generation: 17
  labels:
    nullplatform: "true"
    service: exposer-6
    service_id: d6f0237c-0253-4ee9-bb23-056aacd6c005
  name: k-8-s-exposer-6-d6f0237c-0253-4ee9-bb23-056aacd6c005-public
  namespace: nullplatform
  resourceVersion: "5537"
  uid: f2a2d0f1-db4f-464e-a9f8-a1d9acb3f41b
spec:
  ingressClassName: alb
  rules:
    - host: my-domain.nullapps.io
      http:
        paths:
          - backend:
              service:
                name: d-1690197263-197236571
                port:
                  number: 8080
            path: /some-path
            pathType: Prefix
          - backend:
              service:
                name: d-1838046515-260020597
                port:
                  number: 8080
            path: /users
            pathType: Prefix
status:
  loadBalancer: {}
